src/objects/Contract_Prepay_TrueUp__c.object
<CustomObject>
    <description>[Object to support Zuora royalty solution]</description>
    <fields>
        <fullName>Book_Date__c</fullName>
        <label>Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Book_amount__c</fullName>
        <label>Book Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Prepay_Financial_Data__c</fullName>
        <label>Contract Prepay Financial Data</label>
        <referenceTo>Contract_Prepay_Financial_Data__c</referenceTo>
        <relationshipLabel>Contract Prepay TrueUps</relationshipLabel>
        <relationshipName>Contract_Prepay_TrueUps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prepay_Balance__c</fullName>
        <label>Prepay Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Units__c</fullName>
        <label>Revenue Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Royalty_Amount__c</fullName>
        <label>Royalty Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Prepay TrueUp</label>
    <nameField>
        <displayFormat>TrueUp-{0000}</displayFormat>
        <label>Contract Prepay TrueUp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Prepay TrueUps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>